<package format="2">
  <name>kuka_lwr</name>
  <version>0.1.0</version>
  <description>
    ROS meta-package containing kuka lwr packages.
  </description>
  <maintainer email="carlos.rosales@for.unipi.it">Carlos Rosales</maintainer>
  <maintainer email="manuel.bonilla@centropiaggio.unipi.it">Manuel Bonilla</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- PACKAGES -->

  <!-- Model -->
  <depend> lwr_description </depend>

  <!-- ROSControl-based controllers -->
  <depend> lwr_controllers </depend>

  <!--  Hardware interfaces real/sim -->
  <depend> lwr_hw </depend>

  <export>
    <metapackage/>
  </export>
</package>