<package>
  <name>lwr_controllers</name>
  <version>0.1.0</version>
  <description>lwr_controllers</description>
  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>BSD</license>

  <author>Manuel Bonilla</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>controller_interface</build_depend> 
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>control_toolbox</build_depend> 
  <build_depend>realtime_tools</build_depend> 
  <build_depend>urdf</build_depend> 
  <build_depend>forward_command_controller</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>controller_interface</run_depend> 
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>realtime_tools</run_depend> 
  <run_depend>urdf</run_depend> 
  <run_depend>forward_command_controller</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <controller_interface plugin="${prefix}/lwr_controllers_plugins.xml"/>
  </export>
</package>
