<package format="2">
  <name>lwr_controllers</name>
  <version>0.1.0</version>
  <description>lwr_controllers</description>
  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>BSD</license>

  <author>Manuel Bonilla</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend> 
  <depend>control_msgs</depend> 
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <depend>forward_command_controller</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>lwr_hw</depend>
  <depend>tf_conversions</depend>
  
  <build_depend>message_generation</build_depend>
  
  <export>
    <controller_interface plugin="${prefix}/lwr_controllers_plugins.xml"/>
  </export>
</package>
