<?xml version="1.0"?>
<package>
  <name>lwr_hw</name>
  <version>0.2.0</version>
  <description>The lwr_hw package implementes real and simulation interfaces to the LWR 4+</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
