<package format="2">
  <name>lwr_hw</name>
  <version>1.0.0</version>
  <description>The lwr_hw package implementes real and simulation interfaces to the LWR 4+</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>GPLv2</license>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
