<package format="2">
  <name>lwr_hw</name>
  <version>1.0.0</version>
  <description>The lwr_hw package implementes real and simulation interfaces to the LWR 4+</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>cmake_modules</depend>
  <depend>controller_manager</depend>
  <depend>kdl_parser</depend>
  <depend>joint_limits_interface</depend>
  <depend>std_msgs</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
