<?xml version="1.0"?>
<package>
  <name>single_lwr_launch</name>
  <version>0.1.0</version>
  <description>The single_lwr_launch package to control everything that needs to launched.</description>

  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>single_lwr_robot</run_depend>
  <run_depend>single_lwr_moveit</run_depend>

  <export>
  </export>
</package>