<package format="2">
  <name>single_lwr_robot</name>
  <version>0.1.0</version>
  <description>The single_lwr_robot package</description>

  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>
  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lwr_hw</exec_depend>
  <exec_depend>lwr_description</exec_depend>
  <exec_depend>lwr_controllers</exec_depend>

  <export>
  </export>
</package>