<?xml version="1.0"?>
<package>
  <name>kuka_controllers</name>
  <version>0.0.0</version>
  <description>The kuka_controllers package contains the kuka controllers for simulation of the real controllers</description>

  <maintainer email="josemanuelbonilla@gmail.com">Manuel Bonilla</maintainer>
  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>


  <license>BSD</license>
  <license>WTFPL</license>

  <url type="website">https://github.com/CentroEPiaggio/kuka-lwr.git</url>

  <author email="josemanuelbonilla@gmail.com">Manuel Bonilla</author>
  <author email="cjrosales@gmail.com">Carlos Rosales</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>